--- a/plaquettes.css
+++ b/plaquettes.css
@@ -345,7 +345,8 @@
             }
 
             .sidebar,
-            .toolbar-preview {
+            .toolbar-preview,
+            .help-btn { /* ⬅️ AJOUTEZ .help-btn ICI */
                 display: none !important;
             }
 
